Optimize ToonWriter and ToonReader performance, update README
ToonWriter: ~19% faster writes via WriteFieldPlan caching, direct
Appendable output, StringBuilder pooling, and escape-free fast paths.

ToonReader: ~15% faster reads via FastReader replacement,
appendFieldForParser, string/number caching, and reduced allocations.

README: Add TOON Format section with tabular example, expand vs JToon
comparison table.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>